--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,68 +1,103 @@
 <% layout("/layouts/boilerplate") %>
 
-    <body>
-        <div class="row mt-3 offset-3">
-            <div class="col-8 ">
-                <h3><%= listing.title%></h3>
-            </div>
-            <div class="card col-6 show-card listing-card">
-                <img src="<%= listing.image %>" class="card-img-top show-img" alt="listing_image">
-                <div class="card-body">
-                    <p class="card-text">
-                       
-                        <%= listing.description%> <br>
-                            &#8377 <%= listing.price.toLocaleString("en-IN")%> <br>
-                                <%= listing.location%> <br>
-                                    <%= listing.country%>
-                    </p>
-                </div>
-            </div>
+<body>
+  <div class="row mt-3 offset-3">
+    <div class="col-8">
+      <h3><%= listing.title%></h3>
+    </div>
+    <div class="card col-6 show-card listing-card">
+      <img
+        src="<%= listing.image %>"
+        class="card-img-top show-img"
+        alt="listing_image"
+      />
+      <div class="card-body">
+        <p class="card-text">Owned by <i><%= listing.owner.username %></i></p>
+        <p class="card-text"><%= listing.description%></p>
+        <p class="card-text">&#8377 <%= listing.price.toLocaleString("en-IN")%></p>
+        <p class="card-text"><%= listing.location%></p>
+        <p class="card-text"><%= listing.country%></p>
+      </div>
+    </div>
 
-            <br>
-            <div class="btns mb-4 ">
-                <a href="/listings/<%= listing._id%>/edit" class="btn btn-dark edit-btn col-1">Edit</a>
-          
+    <br />
+    <% if(currUser && currUser._id.equals(listing.owner._id)){ %>
+    <div class="btns mb-4">
+      <a
+        href="/listings/<%= listing._id%>/edit"
+        class="btn btn-dark edit-btn col-1"
+        >Edit</a
+      >
 
-                <form action="/listings/<%= listing._id%>?_method=DELETE" method="POST">
-                    <button class="btn btn-dark offset-4">Delete</button>
-                </form>
-            </div>
+      <form action="/listings/<%= listing._id%>?_method=DELETE" method="POST">
+        <button class="btn btn-dark offset-4">Delete</button>
+      </form>
+    </div>
+    <%} %>
 
-            <div class="col-8 ">
-                <hr>
-                <h4>Leave a review</h4>
-                <form action="/listings/<%= listing.id  %>/reviews" method="POST" novalidate class="needs-validation">
-                    <div class="mb-3 mt-3">
-                        <label for="rating" class="form-label">Rating</label>
-                        <input type="range" min="1" max="5" id="rating" name=review[rating]" class="form-range" >
-                    </div>
-                    <div class="mb-3 mt-3">
-                        <label for="comment" class="form-label">Comments</label>
-                        <textarea name="review[comment]" id="comment" cols="30" rows="10" class="form-control" required></textarea>
-                        <div class="invalid-feedback">Please add some comments for review</div>
-                    </div>
-                    <button class="btn btn-outline-dark mb-3 mt-3">Submit</button>
-                </form>
-                <hr>
-                <h4>All Reviews</h4>
-                  
-                <div class="row">
-                <% for(review of listing.reviews){%>
-                    <div class="card col-5 ms-3 mb-3">
-                        <div class="card-body">
-                        <h5 class="card-title">Steve</h5>
-                        <p class="card-text"><%= review.comment %></p>
-                        <p class="card-text"><%= review.rating %> stars</p>
-                        </div>
-                        <form action="/listings/<%=listing._id  %>/reviews/<%= review._id %>?_method=DELETE" class="mb-3 mt-3" method="POST">
-                            <button class="btn btn-sm btn-dark">Delete</button>
-                        </form>
-                    </div>
-                    
-                <%} %>
-                </div>
-                
-                
-            </div>
+    <% if(currUser){ %>
+
+    <div class="col-8">
+      <hr />
+      <h4>Leave a review</h4>
+      <form
+        action="/listings/<%= listing._id  %>/reviews"
+        method="POST"
+        novalidate
+        class="needs-validation"
+      >
+        <div class="mb-3 mt-3">
+          <label for="rating" class="form-label">Rating</label>
+          <input type="range" min="1" max="5" id="rating" name=review[rating]"
+          class="form-range" >
         </div>
-    </body>
+        <div class="mb-3 mt-3">
+          <label for="comment" class="form-label">Comments</label>
+          <textarea
+            name="review[comment]"
+            id="comment"
+            cols="30"
+            rows="10"
+            class="form-control"
+            required
+          ></textarea>
+          <div class="invalid-feedback">
+            Please add some comments for review
+          </div>
+        </div>
+        <button class="btn btn-outline-dark mb-3 mt-3">Submit</button>
+      </form>
+   <%  } %>
+
+   <% if(listing.reviews == 0){%>
+    <hr/>
+    <h4 class="mb-3">No Reviews</h4>
+   <%  }else{ %>
+        <hr />
+      <h4 class="mb-3">All Reviews</h4>
+
+      <div class="row">
+        <% for(review of listing.reviews){%>
+        <div class="card col-5 ms-3 mb-3">
+          <div class="card-body">
+            <h5 class="card-title">@<%= review.author.username %></h5>
+            <p class="card-text"><%= review.comment %></p>
+            <p class="card-text"><%= review.rating %> stars</p>
+          </div>
+          <form
+            action="/listings/<%=listing._id  %>/reviews/<%= review._id %>?_method=DELETE"
+            class="mb-3 mt-3"
+            method="POST"
+          >
+          <% if(currUser && currUser._id.equals(review.author._id)){ %>
+            <button class="btn btn-sm btn-dark">Delete</button>
+            <%} %>
+          </form>
+        </div>
+
+        <%} %>
+      </div>
+     <% } %>
+    </div>
+  </div>
+</body>
