Improved the ui of the frontpage(index.ejs) and the show.ejs

--- a/public/css/rating.css
+++ b/public/css/rating.css
@@ -300,3 +300,8 @@
   -webkit-animation-timing-function: ease-in-out;
           animation-timing-function: ease-in-out;
 }
+
+.starability-result {
+  transform: scale(0.7); /* smaller stars */
+  transform-origin: left center;
+}
